--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
         <div class="copy-wrapper">
           <span id="copy-text" class="copy-text">Copied</span>
           <button aria-label="Copy password" id="copy-button" class="copy-btn">
-            <img src="assets/images/icon-copy.svg" alt="" class="copy-icon" />
+            <svg
+              width="21"
+              height="24"
+              xmlns="http://www.w3.org/2000/svg"
+              class="copy-icon"
+            >
+              <path
+                d="M20.341 3.091 17.909.659A2.25 2.25 0 0 0 16.319 0H8.25A2.25 2.25 0 0 0 6 2.25V4.5H2.25A2.25 2.25 0 0 0 0 6.75v15A2.25 2.25 0 0 0 2.25 24h10.5A2.25 2.25 0 0 0 15 21.75V19.5h3.75A2.25 2.25 0 0 0 21 17.25V4.682a2.25 2.25 0 0 0-.659-1.591ZM12.469 21.75H2.53a.281.281 0 0 1-.281-.281V7.03a.281.281 0 0 1 .281-.281H6v10.5a2.25 2.25 0 0 0 2.25 2.25h4.5v1.969a.282.282 0 0 1-.281.281Zm6-4.5H8.53a.281.281 0 0 1-.281-.281V2.53a.281.281 0 0 1 .281-.281H13.5v4.125c0 .621.504 1.125 1.125 1.125h4.125v9.469a.282.282 0 0 1-.281.281Zm.281-12h-3v-3h.451c.075 0 .147.03.2.082L18.667 4.6a.283.283 0 0 1 .082.199v.451Z"
+                fill="currentColor"
+              />
+            </svg>
           </button>
         </div>
       </div>
@@ -45,44 +55,56 @@
           />
         </div>
         <div class="checkbox-wrapper">
-          <div>
-            <input
-              type="checkbox"
-              name="options"
-              id="uppercase"
-              value="uppercase"
-            />
+          <div class="checkbox-label-wrapper">
+            <div class="checkbox-container">
+              <input
+                type="checkbox"
+                name="options"
+                id="uppercase"
+                value="uppercase"
+              />
+              <span class="custom-checkbox"></span>
+            </div>
             <label for="uppercase" class="form-label"
               >Include Uppercase Letters</label
             >
           </div>
-          <div>
-            <input
-              type="checkbox"
-              name="options"
-              id="lowercase"
-              value="lowercase"
-            />
+          <div class="checkbox-label-wrapper">
+            <div class="checkbox-container">
+              <input
+                type="checkbox"
+                name="options"
+                id="lowercase"
+                value="lowercase"
+              />
+              <span class="custom-checkbox"></span>
+            </div>
             <label for="lowercase" class="form-label"
               >Include Lowercase Letters</label
             >
           </div>
-          <div>
-            <input
-              type="checkbox"
-              name="options"
-              id="numbers"
-              value="numbers"
-            />
+          <div class="checkbox-label-wrapper">
+            <div class="checkbox-container">
+              <input
+                type="checkbox"
+                name="options"
+                id="numbers"
+                value="numbers"
+              />
+              <span class="custom-checkbox"></span>
+            </div>
             <label for="numbers" class="form-label">Include Numbers</label>
           </div>
-          <div>
-            <input
-              type="checkbox"
-              name="options"
-              id="symbols"
-              value="symbols"
-            />
+          <div class="checkbox-label-wrapper">
+            <div class="checkbox-container">
+              <input
+                type="checkbox"
+                name="options"
+                id="symbols"
+                value="symbols"
+              />
+              <span class="custom-checkbox"></span>
+            </div>
             <label for="symbols" class="form-label">Include Symbols</label>
           </div>
         </div>
@@ -99,12 +121,13 @@
           </div>
         </div>
         <button class="btn">
-          <span>Generate</span
-          ><img
-            src="assets/images/icon-arrow-right.svg"
-            alt=""
-            class="arrow-icon"
-          />
+          <span>Generate</span>
+          <svg width="12" height="12" xmlns="http://www.w3.org/2000/svg">
+            <path
+              fill="currentColor"
+              d="m5.106 12 6-6-6-6-1.265 1.265 3.841 3.84H.001v1.79h7.681l-3.841 3.84z"
+            />
+          </svg>
         </button>
       </form>
     </main>
