Fix HTML validation issue

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </label>
           <input
             type="range"
-            name=""
+            name="password-length"
             id="length"
             min="0"
             max="20"
