Fix size of svg

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             disabled
           >
             <svg
-              width="21"
-              height="24"
+              viewBox="0 0 21 24"
               xmlns="http://www.w3.org/2000/svg"
               class="copy-icon"
             >
